--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,36 +33,6 @@ jobs:
         name: gotify-tray-installer-win.exe
         path: gotify-tray-installer-win.exe
 
-  build-debian:
-    strategy:
-      matrix:
-        tag: [bullseye, bookworm]
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-          python-version: '3.13'
-    - name: Upgrade pip and enable wheel support
-      run: python -m pip install --upgrade pip setuptools wheel
-    - uses: ruby/setup-ruby@v1
-      with:
-       ruby-version: '3.0'
-    - name: Build
-      run: |
-        pip install -r requirements.txt
-        pip install pyinstaller
-        gem install fpm
-        chmod +x build-linux.sh
-        ./build-linux.sh deb
-        mv "dist/gotify-tray_$(cat version.txt)_amd64.deb" "gotify-tray_$(cat version.txt)_amd64_${{ matrix.tag }}.deb"
-    - name: Upload artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: gotify-tray_${{github.ref_name}}_amd64_${{ matrix.tag }}.deb
-        path: gotify-tray_${{github.ref_name}}_amd64_${{ matrix.tag }}.deb
-
   build-macos:
     runs-on: macos-12
     steps:
@@ -115,7 +85,7 @@ jobs:
 
   release:
     runs-on: ubuntu-latest
-    needs: [build-win64, build-debian, build-macos, pypi]
+    needs: [build-win64, build-macos, pypi]
     steps:
     - uses: actions/checkout@v4
     - uses: actions/download-artifact@v4
@@ -127,6 +97,4 @@ jobs:
         files: |
           gotify-tray-installer-win.exe
           gotify-tray.dmg
-          gotify-tray_${{github.ref_name}}_amd64_bullseye.deb
-          gotify-tray_${{github.ref_name}}_amd64_bookworm.deb
           gotify_tray-${{github.ref_name}}-py3-none-any.whl
